# WebSocket_server

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
WebSocket/: CMakeLists.txt
WebSocket/gui/: main.cpp  main.hpp  ws_client.cpp  ws_client.hpp
WebSocket/include/: ws_api.h  ws_client.hpp  ws_server.hpp
WebSocket/src/: ws_api.cpp  ws_client.cpp  ws_client.hpp  ws_server.cpp
WebSocket/tests/: test_client.cpp  test_server.cpp
include/: qt_ws_client.h  ws_api.h  ws_server.hpp
src/: qt_ws_client.cpp  server.cpp  ws_api.cpp  ws_server.cpp
